# phone-bridge

./: README.md  mise.toml
apps/desktop/: .prettierignore  eslint.config.js  package.json  svelte.config.js  vite.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: identity.rs  mdns.rs
apps/desktop/src/routes/: +page.svelte
apps/mobile/: .gitignore  settings.gradle.kts
apps/mobile/composeApp/: build.gradle.kts
apps/mobile/composeApp/src/androidMain/kotlin/com/smazik/phonebridge/: MainActivity.kt  MainApplication.kt  Platform.android.kt
apps/mobile/composeApp/src/androidMain/kotlin/com/smazik/phonebridge/di/: PlatformModule.android.kt
apps/mobile/composeApp/src/androidMain/res/values/: strings.xml
apps/mobile/composeApp/src/commonMain/kotlin/com/smazik/phonebridge/: App.kt  Greeting.kt  Platform.kt
apps/mobile/composeApp/src/commonTest/kotlin/com/smazik/phonebridge/: ComposeAppCommonTest.kt
apps/mobile/composeApp/src/iosMain/kotlin/com/smazik/phonebridge/: MainViewController.kt  Platform.ios.kt
apps/mobile/gradle/: libs.versions.toml
apps/mobile/iosApp/Configuration/: Config.xcconfig
apps/mobile/iosApp/iosApp/: iOSApp.swift
apps/mobile/iosApp/iosApp.xcodeproj/: project.pbxproj
apps/mobile/iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/smazik.xcuserdatad/: UserInterfaceState.xcuserstate
apps/mobile/iosApp/iosApp.xcodeproj/xcuserdata/smazik.xcuserdatad/xcschemes/: iosApp.xcscheme
(+3 files in other folders)
